--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Automatically redact sensitive information in your documents using AI" />
+    <meta name="theme-color" content="#4f46e5" />
     <title>Redact-o-mat - Document Redaction Tool</title>
   </head>
   <body>
